; ModuleID = '/home/carl/AnghaBench/curl/lib/extr_http.c_checkprefixmax.c'
source_filename = "/home/carl/AnghaBench/curl/lib/extr_http.c_checkprefixmax.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*, i64)* @checkprefixmax to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @checkprefixmax(i8* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = call i32 @strlen(i8* %8)
  %10 = load i64, i64* %6, align 8
  %11 = call i64 @CURLMIN(i32 %9, i64 %10)
  store i64 %11, i64* %7, align 8
  %12 = load i8*, i8** %4, align 8
  %13 = load i8*, i8** %5, align 8
  %14 = load i64, i64* %7, align 8
  %15 = call i32 @curl_strnequal(i8* %12, i8* %13, i64 %14)
  ret i32 %15
}

declare dso_local i64 @CURLMIN(i32, i64) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @curl_strnequal(i8*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
